--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
 
-command = "yarn build && yarn export"
+command = "npm run production"
 publish = "build_production"
-environment = { PHP_VERSION = "7.4" }
+environment = { PHP_VERSION = "7.2" }
