--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
 
-media_folder: "sourceassets/images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "assets/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "source/assets/images/uploads" # Media files will be stored in the repo under static/images/uploads
+public_folder: "/assets/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
   - name: "organizers" # Used in routes, e.g., /admin/collections/blog
