--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
 
 command = "npm run production"
-publish = "build_production"
+publish = "build_local"
 environment = { PHP_VERSION = "7.4" }
